Fix spacing on personal links

--- a/css/main.scss
+++ b/css/main.scss
@@ -91,7 +91,7 @@ html, body, .page-content, .wrapper {
 }
 
 #profile a {
-  margin: 0 0 0 30px;
+  margin: 0 0 0 46px;
 }
 
 #furry {
